# mcpClient

./: CLAUDE.md  README.md  main.py  messages-examples.json  my_agent.py  pylintrc  pyproject.toml  pyrightconfig.json
documentation/: Model Context Protocol Instructions
src/: main.py  main3.py  mcp_client.py  my_agent.py  prompts.py  tests.ipynb
tests/: package-lock.json  package.json  test.js  tomatoe.test.ts
